--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,24 @@
+:root {
+    --light-gray: #dddddd;
+    --white: #ffffff;
+    --dark-gray: rgb(118, 118, 118);
+    --defualt-borer-radius: 5px;
+}
+
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
+}
+
+html {
+    font-size: 12px;
 }
 
 input:not([type="checkbox"]),
 select {
     width: 100%;
-    padding: 10px 10px;
+    padding: 8px;
+    border: 1px solid var(--dark-gray);
+    border-radius: var(--defualt-borer-radius);
 }
 
 input,
@@ -16,7 +27,18 @@ select {
 }
 
 select {
-    background-position: 20px;
+    background-color: var(--white);
+}
+
+select:disabled {
+    opacity: 1;
+}
+
+input:read-only {
+    border: 1px solid var(--dark-gray);
+    outline: none;
+    color: var(--dark-gray);
+    border-radius: var(--defualt-borer-radius);
 }
 
 .title {
@@ -29,7 +51,7 @@ select {
 }
 
 .sub-text {
-    color: lightgray;
+    color: var(--light-gray);
     font-size: 0.7rem;
 }
 
@@ -48,6 +70,8 @@ select {
     align-items: center;
     padding: 0 10px;
     flex-shrink: 0;
+    font-weight: 600;
+    font-size: 1rem;
 }
 
 .requried {
@@ -57,10 +81,10 @@ select {
     input {
         border: 1px solid red;
         background: #ffffff;
-        border-radius: 2px;
+        border-radius: var(--defualt-borer-radius);
     }
     input:focus {
-        outline: 2px solid red;
+        outline: 1px solid red;
     }
 }
 
@@ -72,8 +96,6 @@ select {
 
     height: 50px;
     overflow: hidden;
-
-    font-size: 0.7rem;
 
     padding: 5px 3px;
 }
